work on recipe images to fix alignment issues and recipe display issues

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -31,6 +31,12 @@ html * {
 .btn {
     font-weight: bold !important;
 }
+
+img {
+    height: auto;
+    width: 100%;
+  }
+  
 /*-------------------------------------*/
 /*Navbar in base.html but on all pages*/
 /*-----------------------------------*/
@@ -57,8 +63,8 @@ html * {
 
 /*Logo*/
 #logo {
-    height: 120px;
-    width: 130px;
+    height: 140px;
+    width: 140px;
     padding: 10px;
 }
 
@@ -151,11 +157,13 @@ footer {
     padding: 10px;    
 }
 
-.card-img-top {
+
+
+.card-img-top1 {
     border-radius: 5px;
     border: 2px solid rgb(20, 88, 20);
-    /* width: 240px;
-    height: 250px;  */
+    width: 380px;
+    height: 300px;   
 }
 
 /*Flash for author on image in blogs*/
@@ -431,7 +439,9 @@ textarea {
 #centerimage {
     display: block;
     margin-left: auto;
-    margin-right: auto;   
+    margin-right: auto;
+    width: 300px;
+    height: 200px;   
 }
 
 .btn-link {
@@ -493,6 +503,7 @@ textarea {
     text-align: center;
     color:rgb(35, 94, 35);
     text-transform: capitalize;
+    min-height: 90px;
 }
 
 .recipe-subtitle {
@@ -769,11 +780,17 @@ ul li, ol li {
     text-align: center;
     line-height: 1.5;
     padding: 5px;
-    text-align: justify;    
+    text-align: center;    
 }
 
-.btn-danger {
-    
+.card-body3 {
+    min-height: 300px;   
+    line-height: 1.5;
+    padding: 5px;
+    text-align: center;    
+}
+
+.btn-danger {    
     font-weight: bold;
 }
 
